--- a/src/animatedQubits/package.json
+++ b/src/animatedQubits/package.json
@@ -19,11 +19,9 @@
   },
   "devDependencies": {
     "jasmine-node": "1.11.x",
-    "jshint": "2.1.x"
+    "jshint": "2.1.x",
+    "mockery": "1.4.x"
   },
-  "optionalDependencies": {},
-  "engines": {
-    "node": "*"
-  }
+  "optionalDependencies": {}
 }
 
