--- a/src/animatedQubits/bower.json
+++ b/src/animatedQubits/bower.json
@@ -3,16 +3,15 @@
   "main": "animatedQubits.js",
   "version": "0.0.0",
   "homepage": "https://github.com/davidbkemp/scratch",
-  "authors": [
-    "David Kemp <davidbkemp@gmail.com>"
-  ],
-  "description": "Library for animating quantum computations",
+  "description": "quantum computation animation development library",
   "keywords": [
     "quantum",
-    "jsqubits",
     "animation",
-    "visualisation",
+    "jsqubits",
     "d3"
+  ],
+  "authors": [
+    "David Kemp"
   ],
   "license": "MIT",
   "private": true,
@@ -20,15 +19,13 @@
     "**/.*",
     "node_modules",
     "bower_components",
-    "app/bower_components",
     "test",
-    "tests"
+    "tests",
+    "example",
+    "examples"
   ],
-    "dependencies": {
-        "d3": "3.3.8",
-        "d3-measure-text": "0.0.1",
-        "qubitsGraphics": "lib/qubitsGraphics.js",
-        "jsqubits": "lib/jsqubits.js",
-        "d3-transform": "lib/d3-transform.js"
-    }
+  "dependencies": {
+    "d3-measure-text": "~0.0.1",
+    "d3": "~3.3.8"
+  }
 }
