--- a/src/animatedQubits/example/bower.json
+++ b/src/animatedQubits/example/bower.json
@@ -1,22 +1,21 @@
 {
-  "name": "animatedQubitsExample",
+  "name": "example",
   "version": "0.0.0",
   "homepage": "https://github.com/davidbkemp/scratch",
   "authors": [
     "David Kemp <davidbkemp@gmail.com>"
   ],
-  "description": "example",
   "license": "MIT",
   "private": true,
   "ignore": [
     "**/.*",
     "node_modules",
     "bower_components",
-    "app/bower_components",
     "test",
     "tests"
   ],
-    "dependencies": {
-        "animatedQubits": "../bower.json"
-    }
+  "dependencies": {
+    "animatedQubits": "../../animatedQubits.tar.gz",
+    "requirejs": "~2.1.9"
+  }
 }
