--- a/src/animatedQubits/examples/simpleImports/bower.json
+++ b/src/animatedQubits/examples/simpleImports/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "d3": "~3.3.8",
-    "d3-measure-text" : "0.0.1"
+    "d3-measure-text" : "0.0.1",
+    "d3-transform": "trinary/d3-transform"
   }
 }
