--- a/src/animatedQubits/examples/usingRequire/bower.json
+++ b/src/animatedQubits/examples/usingRequire/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "d3": "~3.3.8",
     "d3-measure-text" : "0.0.1",
-    "requirejs": "~2.1.9"
+    "requirejs": "~2.1.9",
+    "d3-transform": "trinary/d3-transform"
   }
 }
