Start on phase calculation

--- a/src/animatedQubits/examples/usingRequire/bower.json
+++ b/src/animatedQubits/examples/usingRequire/bower.json
@@ -18,6 +18,7 @@
     "d3": "~3.3.8",
     "d3-measure-text" : "0.0.1",
     "requirejs": "~2.1.9",
-    "d3-transform": "trinary/d3-transform"
+    "d3-transform": "trinary/d3-transform",
+    "q": "~0.9.6"
   }
 }
