--- a/src/animatedQubits/examples/simpleImportsUsingMinifiedJs/bower.json
+++ b/src/animatedQubits/examples/simpleImportsUsingMinifiedJs/bower.json
@@ -15,8 +15,6 @@
     "tests"
   ],
   "dependencies": {
-    "d3": "~3.3.8",
-    "d3-measure-text" : "0.0.1",
-    "d3-transform": "trinary/d3-transform"
+    "animatedQubits": "../.."
   }
 }
