--- a/src/animatedQubits/examples/usingRequire/bower.json
+++ b/src/animatedQubits/examples/usingRequire/bower.json
@@ -15,10 +15,7 @@
     "tests"
   ],
   "dependencies": {
-    "d3": "~3.3.8",
-    "d3-measure-text" : "0.0.1",
-    "requirejs": "~2.1.9",
-    "d3-transform": "trinary/d3-transform",
-    "q": "~0.9.6"
+    "animatedQubits": "../..",
+    "requirejs": "~2.1.x"
   }
 }
